--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,17 @@ body {
     text-align: center;
     height: 100%;
     color: #FAF9F6;
-    font-family: "Indie Flower", cursive;
+    font-family: 'Indie Flower', cursive;
 }
 
-.panel-body {
-    background: #fafafa;
+/* Game Area */
+
+.gamespace {
+    background: #EAA95D;
     border-radius: 4px;
     box-shadow: 0px 0px 25px #666;
 }
 
+.score {
+    font-size: 20px;
+}
