--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ h1, h2, h3, h4, h5, h6, p {
     text-align: left;
 }
 
+
 .modal-body {
     font-size: 20px;
 }
@@ -39,11 +40,6 @@ h1, h2, h3, h4, h5, h6, p {
 
 /* Game Interface */
 
-.btn {
-    box-shadow: 0px 0px 25px #c0c0c0;
-    border-radius: 2px;
-}
-
 .loss {
     display: none;
 }
@@ -55,6 +51,53 @@ h1, h2, h3, h4, h5, h6, p {
 .game-buttons {
     text-align: center;
 }
+
+/* MDB Button Style for Extra Large Screen */
+@media (max-width:3920px) {
+    .btn-sq-responsive {
+    width: 200px !important;
+    max-width: 100% !important;
+    max-height: 100% !important;
+    height: 200px !important;
+    font-size:24px;
+    }
+    }
+    
+    /* MDB Button Style for Large Screen */
+    @media (max-width:991px) {
+    .btn-sq-responsive {
+    width: 150px !important;
+    max-width: 100% !important;
+    max-height: 100% !important;
+    height: 150px !important;
+    font-size:18px;
+    }
+    }
+    
+    /* MDB Button Style for Medium Screen */
+    @media (max-width:767px) {
+    .btn-sq-responsive {
+    width: 100px !important; /* whatever width you want for medium screen */
+    max-width: 100% !important;
+    max-height: 100% !important;
+    height: 100px !important; /* whatever height you want for medium screen */
+    font-size:12px;
+    }
+    }
+    
+    /* MDB Button Style for Small Screen */
+    @media (max-width:575px) {
+    .btn-sq-responsive {
+    width: 50px !important; /* whatever width you want for mobile screen */
+    max-width: 100% !important;
+    max-height: 100% !important;
+    height: 50px !important; /* whatever height you want for mobile screen */
+    font-size:5px;
+    padding: 0px;
+    font-size:7px;
+    }
+    }
+
 
 .btn-lg {
     padding: 10px 10px;
