--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,9 @@ h1, h2, h3, h4, h5, h6, p {
     height: 600px;
     width: 100%;
     max-width: 100%;
+    position: relative;
 }
+
 
 .score {
     font-size: 20px;
