--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,16 +40,8 @@ h1, h2, h3, h4, h5, h6, p {
     font-size: 26px;
 }
 
-/* Game Interface */
 
-#scorespace {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #EAA95D;
-    border-radius: 5px;
-    border-color: #F75252;
-}
+/* Game Interface */
 
 #gamespace {
     background-image: url('/assets/images/default_background.png'); 
@@ -57,8 +49,23 @@ h1, h2, h3, h4, h5, h6, p {
     background-position: center; 
     height: 600px;
     width: 100%;
-    max-width: 100%;
+    max-width: 800px;
     position: relative;
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 5px;
+    border-color: #F75252;
+}
+
+#scorespace {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #EAA95D;
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 5px;
+    border-color: #F75252;
 }
 
 
@@ -89,10 +96,10 @@ h1, h2, h3, h4, h5, h6, p {
 /* MDB Button Style for Extra Large Screen */
 @media (max-width:3920px) {
     .btn-sq-responsive {
-    width: 200px !important;
+    width: 100px !important;
     max-width: 100% !important;
     max-height: 100% !important;
-    height: 200px !important;
+    height: 100px !important;
     font-size:24px;
     }
     }
@@ -100,10 +107,10 @@ h1, h2, h3, h4, h5, h6, p {
     /* MDB Button Style for Large Screen */
     @media (max-width:991px) {
     .btn-sq-responsive {
-    width: 150px !important;
+    width: 75px !important;
     max-width: 100% !important;
     max-height: 100% !important;
-    height: 150px !important;
+    height: 75px !important;
     font-size:18px;
     }
     }
@@ -111,10 +118,10 @@ h1, h2, h3, h4, h5, h6, p {
     /* MDB Button Style for Medium Screen */
     @media (max-width:767px) {
     .btn-sq-responsive {
-    width: 100px !important; /* whatever width you want for medium screen */
+    width: 50px !important; /* whatever width you want for medium screen */
     max-width: 100% !important;
     max-height: 100% !important;
-    height: 100px !important; /* whatever height you want for medium screen */
+    height: 50px !important; /* whatever height you want for medium screen */
     font-size:12px;
     }
     }
