--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ body {
     height: 100%;
     color: #FAF9F6;
     font-family: 'Indie Flower', sans-serif !important;
+    overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -14,7 +15,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 .title {
     font-size: 50px;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 /* Modal */
@@ -33,7 +34,8 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .modal-footer {
-    text-align: right;
+    text-align: center;
+    align-items: center;
 }
 
 .header {
@@ -45,17 +47,22 @@ h1, h2, h3, h4, h5, h6, p {
 
 #gamespace {
     background-image: url('/assets/images/default_background.png'); 
-    background-size: cover; 
+    background-size: contain; 
+    background-repeat: no-repeat;
     background-position: center; 
-    height: 600px;
     width: 100%;
+    height: 100%;
+    resize: both;
     max-width: 800px;
-    position: relative;
+    max-height: 600px;
+    position: absolute;
     border-radius: 5px;
     border-style: solid;
     border-width: 5px;
     border-color: #F75252;
 }
+
+
 
 #scorespace {
     display: flex;
@@ -67,6 +74,11 @@ h1, h2, h3, h4, h5, h6, p {
     border-width: 5px;
     border-color: #F75252;
 }
+
+#gamespace-row {
+justify-content: center;
+}
+
 
 
 .score {
@@ -92,8 +104,9 @@ h1, h2, h3, h4, h5, h6, p {
 #playTime {
     position: absolute; top:0; left:0;
 }
+/* MDB Button Styles
 
-/* MDB Button Style for Extra Large Screen */
+/* Extra Large Screen */
 @media (max-width:3920px) {
     .btn-sq-responsive {
     width: 100px !important;
@@ -104,7 +117,7 @@ h1, h2, h3, h4, h5, h6, p {
     }
     }
     
-    /* MDB Button Style for Large Screen */
+    /* Large Screen */
     @media (max-width:991px) {
     .btn-sq-responsive {
     width: 75px !important;
@@ -115,24 +128,24 @@ h1, h2, h3, h4, h5, h6, p {
     }
     }
     
-    /* MDB Button Style for Medium Screen */
+    /* Medium Screen */
     @media (max-width:767px) {
     .btn-sq-responsive {
-    width: 50px !important; /* whatever width you want for medium screen */
+    width: 100px !important; /* whatever width you want for medium screen */
     max-width: 100% !important;
     max-height: 100% !important;
-    height: 50px !important; /* whatever height you want for medium screen */
+    height: 100px !important; /* whatever height you want for medium screen */
     font-size:12px;
     }
     }
     
-    /* MDB Button Style for Small Screen */
+    /* Small Screen */
     @media (max-width:575px) {
     .btn-sq-responsive {
-    width: 50px !important; /* whatever width you want for mobile screen */
+    width: 100px !important; 
     max-width: 100% !important;
     max-height: 100% !important;
-    height: 50px !important; /* whatever height you want for mobile screen */
+    height: 100px !important; 
     font-size:5px;
     padding: 0px;
     font-size:7px;
@@ -162,3 +175,12 @@ h1, h2, h3, h4, h5, h6, p {
         width: 81px;
     }
 }
+
+
+/* Screen orientation CSS */
+
+@media (max-width:1000px) and (orientation: landscape) {
+    .title {
+      display: none;
+    }
+    }
