--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,8 +62,6 @@ h1, h2, h3, h4, h5, h6, p {
     border-color: #F75252;
 }
 
-
-
 #scorespace {
     display: flex;
     justify-content: center;
@@ -175,6 +173,18 @@ justify-content: center;
         width: 81px;
     }
 }
+
+/* Progress Bar */
+#myProgress {
+    width: 100%;
+    background-color: grey;
+  }
+  
+  #myBar {
+    width: 100%;
+    height: 30px;
+    background-color: green;
+  }
 
 
 /* Screen orientation CSS */
