--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,10 +52,12 @@ h1, h2, h3, h4, h5, h6, p {
     background-position: center; 
     width: 100%;
     height: 100%;
-    resize: both;
     max-width: 800px;
     max-height: 600px;
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     border-radius: 5px;
     border-style: solid;
     border-width: 5px;
