--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,14 @@ body {
     overflow-x: hidden;
 }
 
-h1, h2, h3, h4, h5, h6, p {
-    color:#333;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    color: #333;
 }
 
 .title {
@@ -46,10 +52,10 @@ h1, h2, h3, h4, h5, h6, p {
 /* Game Interface */
 
 #gamespace {
-    background-image: url('/assets/images/default_background.png'); 
-    background-size: contain; 
+    background-image: url('/assets/images/default_background.png');
+    background-size: contain;
     background-repeat: no-repeat;
-    background-position: center; 
+    background-position: center;
     width: 100%;
     height: 100%;
     max-width: 800px;
@@ -76,7 +82,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 #gamespace-row {
-justify-content: center;
+    justify-content: center;
 }
 
 
@@ -113,55 +119,55 @@ justify-content: center;
 }
 
 /* Hover styling for the buttons */
-.game-icon:hover{
+.game-icon:hover {
     background-color: #205081;
 }
 
 /* Extra Large Screen */
 @media (max-width:3920px) {
     .btn-sq-responsive {
-    width: 100px !important;
-    max-width: 100% !important;
-    max-height: 100% !important;
-    height: 100px !important;
-    font-size:24px;
+        width: 100px !important;
+        max-width: 100% !important;
+        max-height: 100% !important;
+        height: 100px !important;
+        font-size: 24px;
     }
-    }
-    
-    /* Large Screen */
-    @media (max-width:991px) {
+}
+
+/* Large Screen */
+@media (max-width:991px) {
     .btn-sq-responsive {
-    width: 100px !important;
-    max-width: 100% !important;
-    max-height: 100% !important;
-    height: 100px !important;
-    font-size:18px;
+        width: 100px !important;
+        max-width: 100% !important;
+        max-height: 100% !important;
+        height: 100px !important;
+        font-size: 18px;
     }
-    }
-    
-    /* Medium Screen */
-    @media (max-width:767px) {
+}
+
+/* Medium Screen */
+@media (max-width:767px) {
     .btn-sq-responsive {
-    width: 100px !important; /* whatever width you want for medium screen */
-    max-width: 100% !important;
-    max-height: 100% !important;
-    height: 100px !important; /* whatever height you want for medium screen */
-    font-size:12px;
+        width: 100px !important;
+        max-width: 100% !important;
+        max-height: 100% !important;
+        height: 100px !important;
+        font-size: 12px;
     }
-    }
-    
-    /* Small Screen */
-    @media (max-width:575px) {
+}
+
+/* Small Screen */
+@media (max-width:575px) {
     .btn-sq-responsive {
-    width: 100px !important; 
-    max-width: 100% !important;
-    max-height: 100% !important;
-    height: 100px !important; 
-    font-size:5px;
-    padding: 0px;
-    font-size:7px;
+        width: 100px !important;
+        max-width: 100% !important;
+        max-height: 100% !important;
+        height: 100px !important;
+        font-size: 5px;
+        padding: 0px;
+        font-size: 7px;
     }
-    }
+}
 
 
 .btn-lg {
@@ -194,19 +200,36 @@ justify-content: center;
     position: absolute;
     left: 33%;
     bottom: 5px;
-  }
-  
-  #myBar {
+}
+
+#myBar {
     width: 100%;
     height: 10px;
     background-color: green;
-  }
+}
 
 
 /* Screen orientation CSS */
 
 @media (max-width:1000px) and (orientation: landscape) {
     .title {
-      display: none;
+        display: none;
     }
+}
+
+@media only screen and (max-width: 630px) and (orientation: portrait) {
+    body {
+        transform: rotate(-90deg);
+        -ms-transform: rotate(-90deg);
+        -webkit-transform: rotate(-90deg);
+        transform-origin: left top;
+        -ms-transform-origin: left top;
+        -webkit-transform-origin: left top;
+        overflow-x: hidden;
+        width: 100vh;
+        height: 100vw;
+        position: fixed;
+        top: 100%;
+        left: 0;
     }
+}
