--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ p {
 
 #gamespace {
     background-image: url('../images/default_background.png');
-    background-color: #ff7c24;
+    background-color: #C9DAEA;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -66,7 +66,7 @@ p {
     border-radius: 5px;
     border-style: solid;
     border-width: 30px;
-    border-color: #F75252;
+    border-color: #4881b6;
 }
 
 #gamespace img:hover {
@@ -202,7 +202,7 @@ p {
 #myBar {
     width: 100%;
     height: 10px;
-    background-color: green;
+    background-color: #4881b6;
 }
 
 /* Screen orientation CSS */
