--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,15 @@ p {
     transform: translateX(-50%);
 }
 
+#scorespace {
+    display: flex; 
+    justify-content: space-between;
+}
+
+.score-item {
+    margin-right: 20px;
+}
+
 #gamespace-row {
     justify-content: center;
 }
@@ -192,7 +201,7 @@ p {
 
 /* Progress Bar */
 #myProgress {
-    width: 30%;
+    width: 33%;
     background-color: grey;
     position: absolute;
     left: 33%;
@@ -202,7 +211,7 @@ p {
 #myBar {
     width: 100%;
     height: 10px;
-    background-color: #4881b6;
+    background-color: #ffffff;
 }
 
 /* Screen orientation CSS */
